jar 파일로 수정